(fixed)Info blurbs should be hidden until hovered -- finished adding info blurbs to all services for al plans and adjustin accordingly -- Need to adjust spacing between headings and contents; general review of design

--- a/styles/refined-styles/benefit.css
+++ b/styles/refined-styles/benefit.css
@@ -34,8 +34,8 @@
     color: #00000080;
 }
 
-.no-benefit img:first-of-type {
-    opacity: 50%;
+.no-benefit img {
+    opacity: 25%;
 }
 
 .benefit-subtext {
@@ -84,7 +84,7 @@
     font-style: normal; /* Or replace with an actual icon */
     color: #fff;
     text-align: center;
-    opacity: 100%;
+    opacity: 25%;
   }
   
   .info-bubble {
